[gd_scene load_steps=4 format=3 uid="uid://bd17xvf5sbmuf"]

[ext_resource type="Script" path="res://VisualTheme.gd" id="1_trois"]
[ext_resource type="PackedScene" uid="uid://bodelg7ahssyr" path="res://fireworksParticles.tscn" id="2_ejquq"]
[ext_resource type="Script" path="res://FireworksEffect.gd" id="3_b6xbn"]

[node name="VisualTheme" type="Node"]
script = ExtResource("1_trois")

[node name="FireworksEffect" type="Node" parent="."]
script = ExtResource("3_b6xbn")
numberColors = Array[Color]([Color(0, 0, 0, 1), Color(1, 1, 0, 1), Color(0, 1, 0, 1), Color(0, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 0, 1, 1), Color(0.5, 0, 1, 1), Color(0, 0.5, 1, 1), Color(0, 1, 0.5, 1), Color(0.5, 1, 0, 1), Color(1, 0.5, 0, 1), Color(0.5, 0, 0, 1), Color(1, 0, 0, 1)])
firework = ExtResource("2_ejquq")

[connection signal="endWon" from="." to="FireworksEffect" method="Reset"]
[connection signal="win" from="." to="FireworksEffect" method="StartExplosion"]
